--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,34 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <!--=============== FAVICON ===============-->
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon.ico"
+      type="image/x-icon"
+    />
 
-<head>
-  <meta charset="utf-8" />
-  <!--=============== FAVICON ===============-->
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+    <!--=============== FONTS ===============-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!--=============== FONTS ===============-->
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;400;500;700&display=swap" rel="stylesheet">
+    <!--=============== REMIXICONS ===============-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
 
-  <!--=============== REMIXICONS ===============-->
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Discover DataMind's transformative Data & AI solutions. Based in Vietnam's tech hub, we're committed to empowering enterprises and individuals with innovative, customer-centric strategies for a data-driven future."
+    />
+    <meta
+      property="og:image"
+      content="http://api.datamind.vn/uploads/logo.png"
+    />
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <title>Datamind</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-  <title>Datamind</title>
-</head>
+    <!--=============== SCROLLREVEAL ===============-->
+    <!-- <script src="../src/assets/lib/scrollreveal.min.js"></script> -->
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-
-  <!--=============== SCROLLREVEAL ===============-->
-  <!-- <script src="../src/assets/lib/scrollreveal.min.js"></script> -->
-
-  <!--=============== MAIN JS ===============-->
-  <!-- <script src="../src/assets/lib/main.js"></script> -->
-
-</body>
-
+    <!--=============== MAIN JS ===============-->
+    <!-- <script src="../src/assets/lib/main.js"></script> -->
+  </body>
 </html>
